syntax = "proto3";

package calculator;
option go_package = "calculatorpb";

message SumRequest {
    int64 number_1 = 1;
    int64 number_2 = 2;
}

message SumResponse {
    int64 result = 1;
}

message PrimeNumberDecompositionRequest {
    int64 number = 1;
}

message PrimeNumberDecompositionResponse {
    int64 number = 1;
}

message ComputeAverageRequest {
    double number = 1;
}

message ComputeAverageResponse {
    double result = 1;
}

message FindMaximumRequest {
    int32 number = 1;
}

message FindMaximumResponse {
 int32 result = 1;
}

message SquareRootRequest {
    int32 number = 1;
}

message SquareRootResponse {
    double result = 1;
}

service CalculatorService {
    rpc Sum(SumRequest) returns (SumResponse) {};
    rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};
    rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageResponse) {};
    rpc FindMaximum(stream FindMaximumRequest) returns (stream FindMaximumResponse) {};
    rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {};
}
